made text box transparent

--- a/horoscope.css
+++ b/horoscope.css
@@ -6,6 +6,7 @@
     margin: 40px;
     text-align: center;
    color: white;
+   opacity: 0.8;
 }
 #title {
     font-family: "Black Han Sans", san-serif;
